fixing not showing pictures problem

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ ul {
     font-size: 15px;
     font-weight: bold;
     padding:5px;
+    color:white;
 }
 a:hover{
     color:blue;
